--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,18 @@ a.button:visited {
   color: var(--button-color);
 }
 
+input, textarea {
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  padding: 8px;
+  margin: 5px 0;
+  width: 50%;
+}
+
+textarea {
+  height: 100px;
+}
+
 .navigation-list__item--active {
   text-decoration: none;
 }
@@ -118,19 +130,19 @@ a.button:visited {
   text-align: center;
 }
 
-.profile {
+.profile, .contact{
   width: 700px;
   margin: 0 auto;
 }
 
-.about {
+.about, .contact {
   width: 700px;
   margin: 0 auto;
   clear: both; 
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
-  align-items: center;
+  align-items: center; 
 }
 
 * {
@@ -299,6 +311,7 @@ a.button:visited {
 }
 
 #contact-form {
+  width: 75%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
