--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,22 @@ textarea {
 
 .grid__item {
   background-color: lightgray;
+  border: 2px solid var(--dark-grey);
+  border-radius: 10px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
   padding: 15px;
+}
+
+.grid__item:first-child {
+  grid-row: span 2;
+}
+
+.grid__item:nth-child(5) {
+  grid-row: span 2;
+}
+
+.grid__item:last-child {
+  grid-column: span 2;
 }
 
 @media all and (max-width: 500px) {
