--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,12 @@ Primary Color (Purple): #357b70;
  */
 :root {
   /* color vars */
-  --primary-color: #357b70;
+  --primary-color: #4b4b4b;
   --dark-grey: #2b2b2b;
   --active-link: #489c79;
-  --visited-link: #05676e;
+  --visited-link: #656565;
   --button-color: white;
-  --button-background-color: #357b70;
+  --button-background-color: darkgrey;
   --header-boarder-bottom: lightgrey;
   --sun-yellow: #edc655;
   --sun-light-yellow: #fcffad;
@@ -354,4 +354,8 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+textarea::placeholder {
+  font-style: italic;
 }
