updated to production CSS

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -11,406 +11,546 @@ Colors used
 Text Color (Dark Gray): #2b2b2b;
 Primary Color (Purple): #357b70;
  */
-  
-  
-  body {
-   /* background-color: lightgrey; */
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 16px; /* Sets the font size to 16px */
-    line-height: 1.6; /* Sets the line-height to 1.6 */
-  }
-  
-  h1 {
-    font-size: 30px;
-    font-weight: 700;
-  }
-  
-  h2 {
-    font-size: 24px;
-    font-weight: 700;
-  }
-  
-  h3 {
-    font-size: 18px;
-    font-weight: 700;
-  }
-  
-  a {
-    color: #357b70;
-  }
-  
-  a:visited {
-    /* visited link */
-    color: #05676e;
-  }
-  
-  a:hover, a:focus{
-    /* No underlining when hovering over a link */
-    text-decoration: none;
-  }
-  
-  a:active {
-    /* selected link */
-    color: #489c79;
-  }
-  
-  .button {
-    /* overwrites browser defaults and resets the border */
-    border: none;
-    display: inline-block;
-    /* take font from container */
-    font-family: inherit;
-    /* style the button */
-    background-color: #357b70;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition: 0.9s opacity;
-    -o-transition: 0.9s opacity;
-    transition: 0.9s opacity;
-  }
-  
-  button {
-    /* overwrites browser defaults and resets the border */
-    border: none;
-    display: inline-block;
-    /* take font from container */
-    font-family: inherit;
-    /* style the button */
-    background-color: #357b70;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition: 0.9s opacity;
-    -o-transition: 0.9s opacity;
-    transition: 0.9s opacity;
-  }
-  
-  input[type="submit"] {
-    /* overwrites browser defaults and resets the border */
-    border: none;
-    display: inline-block;
-    /* take font from container */
-    font-family: inherit;
-    /* style the button */
-    background-color: #357b70;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition: 0.9s opacity;
-    -o-transition: 0.9s opacity;
-    transition: 0.9s opacity;
-  }
-  
-  .button:hover, .button:focus,
-  button:hover, button:focus, 
-  input[type="submit"]:hover, input[type="submit"]:focus {
-    /* lets the mouse appear as a hand when hovering over the button */
-    cursor: pointer;
-    /* reduces the opacity of the button to 80% */
-    opacity: 0.8;
-  }
-  
-  a.button:visited {
-    color: white;
-  }
-  
-  .navigation-list__item--active {
-    text-decoration: none;
-  }
-  
-  .profile_portrait {
-    float: left;
-    width: 250px;
-    margin-right: 40px;
-    border-radius: 50%;
-    -webkit-box-align:center;
-        -ms-flex-align:center;
-            align-items:center;
-  }
-  
-  .page-footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient:vertical;
-    -webkit-box-direction:normal;
-        -ms-flex-direction:column;
-            flex-direction:column;
-    text-align: center;
-  }
-  
-  .profile {
-    width: 700px;
-    margin: 0 auto;
-  }
-  
-  .about {
-    width: 700px;
-    margin: 0 auto;
-    clear: both; 
-    display: -webkit-box; 
-    display: -ms-flexbox; 
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    /* justify-content: center; */
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  
-  * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  
-  .page-header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    padding: 20px;
-    border-bottom: 1px solid lightgrey;
-  }
-  
-  .page-header__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 200px;
-            flex: 0 1 200px;
-  }
-  
-  .page-header__item:last-child {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    text-align: right;
-  }
-  
-  .navigation-list {
-    list-style-type: none;
-  }
-  
-  .navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
-  }
-  
-  .navigation-list a {
-    text-decoration: none;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-  }
-  
-  .navigation-list a::before {
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #357b70;
-    content: "";
-    opacity: 0;
-    -webkit-transition: all 0.8s;
-    -o-transition: all 0.8s;
-    transition: all 0.8s;
-  }
-  
-  .navigation-list a::after {
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #357b70;
-    content: "";
-    opacity: 0;
-    -webkit-transition: all 0.8s;
-    -o-transition: all 0.8s;
-    transition: all 0.8s;
-  }
-  
-  .navigation-list a::before {
-      top: 2px;
-      -webkit-transform: translateY(10px);
-          -ms-transform: translateY(10px);
-              transform: translateY(10px);
-  }
-  
-  .navigation-list a::after {
-      bottom: 2px;
-      -webkit-transform: translateY(-10px);
-          -ms-transform: translateY(-10px);
-              transform: translateY(-10px);
-  }
-  
-  .navigation-list a:hover:before, 
-  .navigation-list a:hover:after
-  {
-      opacity: 1;
-      -webkit-transform: translateY(0px);
-          -ms-transform: translateY(0px);
-              transform: translateY(0px);
-  }
-  
-  
+ :root {
+  /* color vars */
+
+  /* text weight vars */
+}
+
+body {
+  /* background-color: lightgrey; */
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px; /* Sets the font size to 16px */
+  line-height: 1.6; /* Sets the line-height to 1.6 */
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+a {
+  color: #4b4b4b;
+}
+
+a:visited {
+  /* visited link */
+  color: #656565;
+}
+
+a:hover,
+a:focus {
+  /* No underlining when hovering over a link */
+  text-decoration: none;
+}
+
+a:active {
+  /* selected link */
+  color: #489c79;
+}
+
+.button {
+  /* overwrites browser defaults and resets the border */
+  border: none;
+  display: inline-block;
+
+  /* take font from container */
+  font-family: inherit;
+
+  /* style the button */
+  background-color: darkgrey;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+
+  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
+  border-bottom: 2px solid rgba(0, 0, 0, 30%);
+  -webkit-transition: 0.9s opacity;
+  -o-transition: 0.9s opacity;
+  transition: 0.9s opacity;
+}
+
+button {
+  /* overwrites browser defaults and resets the border */
+  border: none;
+  display: inline-block;
+
+  /* take font from container */
+  font-family: inherit;
+
+  /* style the button */
+  background-color: darkgrey;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+
+  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
+  border-bottom: 2px solid rgba(0, 0, 0, 30%);
+  -webkit-transition: 0.9s opacity;
+  -o-transition: 0.9s opacity;
+  transition: 0.9s opacity;
+}
+
+input[type="submit"] {
+  /* overwrites browser defaults and resets the border */
+  border: none;
+  display: inline-block;
+
+  /* take font from container */
+  font-family: inherit;
+
+  /* style the button */
+  background-color: darkgrey;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+
+  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
+  border-bottom: 2px solid rgba(0, 0, 0, 30%);
+  -webkit-transition: 0.9s opacity;
+  -o-transition: 0.9s opacity;
+  transition: 0.9s opacity;
+}
+
+.button:hover,
+.button:focus,
+button:hover,
+button:focus,
+input[type="submit"]:hover,
+input[type="submit"]:focus {
+  /* lets the mouse appear as a hand when hovering over the button */
+  cursor: pointer;
+
+  /* reduces the opacity of the button to 80% */
+  opacity: 0.8;
+}
+
+a.button:visited {
+  color: white;
+}
+
+input[type="text"] {
+  border: 1px solid #4b4b4b;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 5px 0;
+  width: 50%;
+}
+
+input[type="email"] {
+  border: 1px solid #4b4b4b;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 5px 0;
+  width: 50%;
+}
+
+input[type="tel"] {
+  border: 1px solid #4b4b4b;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 5px 0;
+  width: 50%;
+}
+
+textarea {
+  border: 1px solid #4b4b4b;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 5px 0;
+  width: 50%;
+}
+
+textarea {
+  height: 100px;
+}
+
+.navigation-list__item--active {
+  text-decoration: none;
+}
+
+.page-header__logo {
+  width: 200px;
+}
+
+.profile_portrait {
+  float: left;
+  width: 250px;
+  margin-right: 40px;
+  border-radius: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-footer {
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.profile,
+.contact {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.about,
+.contact {
+  width: 700px;
+  margin: 0 auto;
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+
+  /* justify-content: center; */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.page-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.page-header__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
+}
+
+.page-header__item:last-child {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: right;
+}
+
+.navigation-list {
+  list-style-type: none;
+}
+
+.navigation-list li {
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.navigation-list a {
+  text-decoration: none;
+  margin: 0 10px;
+  padding: 10px;
+  position: relative;
+  z-index: 0;
+}
+
+.navigation-list a::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #4b4b4b;
+  content: "";
+  opacity: 0;
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.navigation-list a::after {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #4b4b4b;
+  content: "";
+  opacity: 0;
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.navigation-list a::before {
+  top: 2px;
+  -webkit-transform: translateY(10px);
+      -ms-transform: translateY(10px);
+          transform: translateY(10px);
+}
+
+.navigation-list a::after {
+  bottom: 2px;
+  -webkit-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+
+.navigation-list a:hover::before,
+.navigation-list a:hover::after {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.grid__item {
+  background-color: lightgray;
+  border: 2px solid #2b2b2b;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 20%);
+          box-shadow: 0 20px 20px rgba(0, 0, 0, 20%);
+  padding: 15px;
+}
+
+.grid__item:first-child {
+  -ms-grid-row-span: 2;
+  grid-row: span 2;
+}
+
+.grid__item:nth-child(5) {
+  -ms-grid-row-span: 2;
+  grid-row: span 2;
+}
+
+.grid__item:last-child {
+  -ms-grid-column-span: 2;
+  grid-column: span 2;
+}
+
+@media all and (max-width: 500px) {
   .grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
   }
-  
-  .grid__item {
-    background-color: lightgray;
-    padding: 15px;
+}
+
+@media all and (min-width: 500px) and (max-width: 750px) {
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
   }
-  
-  @media all and (max-width: 500px) {
-    .grid {
-      -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-    }
+}
+
+@media all and (max-width: 750px) {
+  .grid {
+    grid-gap: 10px;
   }
-  
-  @media all and (min-width: 500px) and (max-width: 750px) {
-    .grid {
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
-    }
+
+  .grid__item:last-child {
+    grid-column: auto / auto;
+    grid-row: auto / auto;
   }
-  
-  @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-    .grid__item:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
+
+  h1 {
+    font-size: 22px;
   }
-  
-  @-webkit-keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
+}
+
+@-webkit-keyframes color-change {
+  0% {
+    fill: #edc655;
   }
-  
-  @keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
+
+  50% {
+    fill: #fcffad;
   }
-  
-  .sun {
-    -webkit-animation: 4s color-change infinite alternate linear;
-            animation: 4s color-change infinite alternate linear;
+
+  100% {
+    fill: #f76414;
   }
-  
-  @-webkit-keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0, 50px);
-              transform: translate(0, 50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+}
+
+@keyframes color-change {
+  0% {
+    fill: #edc655;
   }
-  
-  @keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0, 50px);
-              transform: translate(0, 50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+
+  50% {
+    fill: #fcffad;
   }
-  
-  .cloud-front {
-    -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
+
+  100% {
+    fill: #f76414;
   }
-  
-  @-webkit-keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(466px, 48px);
-              transform: translate(466px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+}
+
+.sun {
+  -webkit-animation: 4s color-change infinite alternate linear;
+          animation: 4s color-change infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
-  
-  @keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(466px, 48px);
-              transform: translate(466px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+
+  to {
+    -webkit-transform: translate(200px, 0);
+            transform: translate(200px, 0);
   }
-  
-  .cloud-back {
-    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
-  
-  .main-body {
-    /* width: 700px; */
-    padding: 20px;
-    margin: 0 auto;
-   /* clear: both; */
-  /*  display: flex;
-    flex-direction: column; 
-    */
-    /* justify-content: center; */
-    /* align-items: left; */
+
+  to {
+    -webkit-transform: translate(200px, 0);
+            transform: translate(200px, 0);
   }
-  
-  #contact-form {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+}
+
+.cloud-lf {
+  -webkit-animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
+
+  to {
+    -webkit-transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
+  }
+}
+
+@keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+
+  to {
+    -webkit-transform: translate(-100px, 0);
+            transform: translate(-100px, 0);
+  }
+}
+
+.cloud-ct,
+.cloud-rt {
+  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+@-webkit-keyframes birds-fly {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+
+  to {
+    -webkit-transform: translate(200px, -50px);
+            transform: translate(200px, -50px);
+  }
+}
+
+@keyframes birds-fly {
+  from {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+
+  to {
+    -webkit-transform: translate(200px, -50px);
+            transform: translate(200px, -50px);
+  }
+}
+
+.bird1,
+.bird2,
+.bird3,
+.bird4 {
+  -webkit-animation: 50s birds-fly infinite alternate linear;
+          animation: 50s birds-fly infinite alternate linear;
+}
+
+.main-body {
+  /* width: 700px; */
+  padding: 20px;
+  margin: 0 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#contact-form {
+  width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+textarea::-webkit-input-placeholder {
+  font-style: italic;
+}
+
+textarea::-moz-placeholder {
+  font-style: italic;
+}
+
+textarea:-ms-input-placeholder {
+  font-style: italic;
+}
+
+textarea::-ms-input-placeholder {
+  font-style: italic;
+}
+
+textarea::placeholder {
+  font-style: italic;
+}
